# e2e-test-20260206-matsuzawa

./: pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/workflows/: run_trial_experiment.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-qwen3-8b-gsm8k.yaml  comparative-1-qwen3-8b-svamp.yaml  proposed-qwen3-8b-gsm8k.yaml  proposed-qwen3-8b-svamp.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
